# fastapi-logging

./: .gitignore  README.md  justfile  pyproject.toml
.devcontainer/: .env.example  app.json  infra.json
app/: config.py  server.py
app/domain/: entities.py  values.py
app/lib/: __init__.py
app/lib/brokers/: base.py  kafka.py
app/lib/repositories/: __init__.py  _converter.py
app/lib/utils/: upcast_env.py  websockets.py
app/router/: __init__.py
deploy/: quadlet.yml
deploy/compose/: draft.yml  kafka.yml  zk-kafka-multiple.yml  zk-kafka-single.yml
src/app/: __init__.py  asgi.py  config.py  exceptions.py  server.py
src/app/domain/: eceptions.py  entities.py  events.py
src/app/lib/: __init__.py
src/app/lib/brokers/: __init__.py  kafka.py
src/app/lib/contrib/: base.py  telegram.py
src/app/lib/repositories/: base.py
src/app/lib/utils/: upcast_env.py
src/app/tests/integrations/: test_telegram_notifications.py
src/app/tests/unit/: test_broker_converter.py
tests/: conftest.py
tests/unit/: test_broker_converter.py  test_domain_entities.py
